<resources>
    <string name="app_name">Bumpy</string>
    <string name="title_activity_dynamic">DynamicActivity</string>
    <string name="accident_button">Accident</string>
    <string name="casualties">Accident with casualties?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="ambulance">Do you need an ambulance?</string>
    <string name="Confirm">Confirm</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_id">Driver ID</string>
    <string name="insurance_num">Driver Insurance Policy</string>
    <string name="driver_license">Driver License</string>
    <string name="car_number">Car license</string>
    <string name="other_driver_header">Other driver details</string>
    <string name="police">Call a Police?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="Date_And_Time">Date And Time</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="user_update">User Update</string>
    <string name="current_driver_header">Your Details</string>
    <string name="_00000000">00000000</string>
    <string name="israel_israeli">Israel Israeli</string>
    <string name="_123456789">123456789</string>
</resources>
