<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bumpy.bumpy.Ambulance">

    <include layout="@layout/toolbar"
        android:id="@+id/custom_toolbar"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:onClick="Yes"
        android:text="@string/yes"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="No"
        android:text="@string/no"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ambulance"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />

</android.support.constraint.ConstraintLayout>
