<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bumpy.bumpy.OtherDriverActivity">

    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/toolbar" />
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_marginTop="?android:attr/actionBarSize"> <!-- This line is critical to avoid overlay -->

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                map:cameraBearing="112.5"
                map:cameraTargetLat="-33.796923"
                map:cameraTargetLng="150.922433"
                map:cameraTilt="30"
                map:cameraZoom="13"
                map:mapType="normal"
                map:uiCompass="false"
                map:uiRotateGestures="true"
                map:uiScrollGestures="false"
                map:uiTiltGestures="true"
                map:uiZoomControls="false"
                map:uiZoomGestures="true"/>

            <!--  driver name Label -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/Date_And_Time"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>


            <!--  driver name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/driverName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/driver_name"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

            <!-- driver id Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/driverID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/driver_id"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

            <!-- car number Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/carNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/car_number"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>


            <!-- insurance number Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/insuranceNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/insurance_num"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

            <!-- driver license Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/driverLicense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/driver_license"
                    android:inputType="none" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>